--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav class="header__navbar hide-on-mobile-tablet">
                     <ul class="header__nav-list">
                         <li class="header__nav-item header__nav-item--hover header__nav-item--separate">Kênh Người Bán</li>
-                        <li class="header__nav-item header__nav-item--hover header__nav-item--separate">Trở thành Người bán Shopee</li>
+                        <li class="header__nav-item header__nav-item--hover header__nav-item--separate">SHOP GIAY TTTT</li>
                         <li class="header__nav-item header__nav-item--hover header__nav-item--separate header__show-qr">
                             Tải ứng dụng
                         </li>
@@ -146,10 +146,10 @@
                         </li>
                         
                         <li class="header__nav-item header__nav-item--bold header__nav-item--separate">
-                            <a href="#" class="header__nav-item-link">Đăng ký</a>
+                            <a href="#" class="header__nav-item-link">Register</a>
                         </li>
                         <li class="header__nav-item header__nav-item--bold">
-                            <a href="#" class="header__nav-item-link">Đăng nhập</a>
+                            <a href="#" class="header__nav-item-link">Login</a>
                         </li>
 
                         <!-- <li class="header__nav-item header__nav-user">
