--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <!-- navbar -->
                 <nav class="header__navbar hide-on-mobile-tablet">
                     <ul class="header__nav-list">
-                        <li class="header__nav-item header__nav-item--hover header__nav-item--separate">Kênh Người Bán</li>
+                        <li class="header__nav-item header__nav-item--hover header__nav-item--separate">Giay VIP</li>
                         <li class="header__nav-item header__nav-item--hover header__nav-item--separate">SHOP GIAY TTTT</li>
                         <li class="header__nav-item header__nav-item--hover header__nav-item--separate header__show-qr">
                             Tải ứng dụng
